--- a/src/app/administrative/change-offline-limit/change-offline-limit.component.html
+++ b/src/app/administrative/change-offline-limit/change-offline-limit.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -13,7 +13,7 @@
               <label class="col-3 col-form-label  font-weight-bold">Current Offline Limit</label>
               <label class="col-form-label pr-0 font-weight-bold">:</label>
               <div class="col-3 input-group">
-                <input type="text" class="form-control" >
+                <input type="text" class="form-control">
                 <div class="input-group-append">
                   <span class="input-group-text" id="basic-addon2">Ubah</span>
                 </div>
