--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,27 @@
 <!--Main layout-->
-<div class="bodyContent">
-  <!-- Start your project here-->
-  <div class="d-flex flex-column h-100">
+
+<div class="dashboard position-fixed">
+  <!-- <div class="d-flex flex-column h-100">
+    <div id="outer" class="d-flex flex-column flex-grow"> -->
+  <div class="card dashboard-body">
+    <div class="card-body">
+
+
+    </div>
+  </div>
+  <!-- </div>
+  </div> -->
+</div>
+<!--Main layout-->
+
+
+<!-- Default form contact -->
+
+<!-- Start your project here-->
+<!-- <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card konten">
         <div class="card-body">
-          <br><br><br><br>
           <h3 class="card-title" style="text-align: center">Home Page Application</h3>
           <h3> Link Khusus untuk test halaman </h3>
 
@@ -131,12 +147,9 @@
               <a class="dropdown-item" [routerLink]="['/cashdrawerhead/daftarsaldo']">Daftar Saldo Kas Cabang</a>
             </div>
           </div>
-          <!-- Default form contact -->
-          <br><br><br><br><br><br><br>
+
         </div>
       </div>
     </div>
-  </div>
-  <!-- /Start your project here-->
-</div>
-<!--Main layout-->
+  </div> -->
+<!-- /Start your project here-->
