--- a/src/app/footer/footer-home/footer-home.component.html
+++ b/src/app/footer/footer-home/footer-home.component.html
@@ -1,6 +1,7 @@
-<footer class="footer">
-  <div class="container text-center font-weight-bold">
-    Copyright &copy; 2018: <a href="/dashboard" class="text-muted"> &ensp;&ensp; Bank Pembangunan Daerah
-      Jawa Tengah (Bank Jateng)</a>All Right Reserved.
+<footer class="footer fixed-bottom">
+  <div class="container text-center font-weight-normal font-color">
+    Copyright &copy; 2018: <a class="font-color font-weight-bold" href="/dashboard"> &ensp;&ensp; Bank Pembangunan
+      Daerah
+      Jawa Tengah (Bank Jateng)</a> All Right Reserved.
   </div>
 </footer>
