--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
@@ -8,10 +8,10 @@
           <h5 class="text-primary font-weight-bold">PENCARIAN KARTU ATM</h5>
           <!-- Default form contact -->
           <div class="card">
-              <div class="card-body">
+            <div class="card-body">
               <form>
-                  <h5>MASUKAN KRITERIA PENCARIAN</h5>
-                  <table class="table table-borderless">
+                <h5>MASUKAN KRITERIA PENCARIAN</h5>
+                <table class="table table-borderless">
                   <tr>
                     <td style="width: 150px;" class="font-weight-normal">Pilih Kriteria</td>
                     <td style="width: 5px;">:</td>
@@ -21,7 +21,8 @@
                   <tr>
                     <td></td>
                     <td></td>
-                    <td><input class="font-weight-normal" type="radio" id="radio1" name="radio1" value="option1"> Nama pada Kartu</td>
+                    <td><input class="font-weight-normal" type="radio" id="radio1" name="radio1" value="option1"> Nama
+                      pada Kartu</td>
                   </tr>
                   <tr>
                     <td class="font-weight-normal">Masukkan Nilai</td>
@@ -53,42 +54,42 @@
                   </tr>
                 </thead>
                 <tr>
-                    <td class="font-weight-normal">123456789</td>
-                    <td class="font-weight-normal">AAAA</td>
-                    <td class="font-weight-normal">Aktif</td>
-                    <td class="font-weight-normal">Normal</td>
-                    <td class="font-weight-normal">Buka </td>
+                  <td class="font-weight-normal">123456789</td>
+                  <td class="font-weight-normal">AAAA</td>
+                  <td class="font-weight-normal">Aktif</td>
+                  <td class="font-weight-normal">Normal</td>
+                  <td class="font-weight-normal">Buka </td>
                 </tr>
                 <tr>
-                    <td class="font-weight-normal">123456789</td>
-                    <th class="font-weight-normal">DDDDDDD</th>
-                    <td class="font-weight-normal">Aktif</td>
-                    <td class="font-weight-normal">Capture</td>
-                    <td class="font-weight-normal">Tutup</td>
+                  <td class="font-weight-normal">123456789</td>
+                  <th class="font-weight-normal">DDDDDDD</th>
+                  <td class="font-weight-normal">Aktif</td>
+                  <td class="font-weight-normal">Capture</td>
+                  <td class="font-weight-normal">Tutup</td>
                 </tr>
               </table>
             </div>
           </div>
-                    <!--Pagination-->
-                    <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
-                        <nav aria-label="Page navigation example">
-                          <ul class="pagination pg-blue">
-                            <li class="page-item">
-                              <a class="page-link">
-                                <span >&laquo;&laquo; Sebelumnya</span>
-                              </a>
-                            </li>
-                            <li class="page-item">
-                              <a class="page-link">
-                                <span >Selanjutnya &raquo;&raquo;</span>
-                              </a>
-                            </li>
-                          </ul>
-                        </nav>
-                      </div>
-                      <!--Pagination-->
+          <!--Pagination-->
+          <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
+            <nav aria-label="Page navigation example">
+              <ul class="pagination pg-blue">
+                <li class="page-item">
+                  <a class="page-link">
+                    <span>&laquo;&laquo; Sebelumnya</span>
+                  </a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link">
+                    <span>Selanjutnya &raquo;&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!--Pagination-->
           <br>
-              
+
         </div>
       </div>
     </div>
