--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah/duplikat-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah/duplikat-nasabah.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -69,40 +69,40 @@
             </div>
             <!--input 7-->
             <!--input 8-->
-              <div class="form-group row">
-                <label class="col-2 col-form-label  font-weight-bold">Propinsi</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3">
-                  <select class="custom-select" name="optkodempn" id="optkodempn">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">Jawa Tengah</option>
-                    <option value="2">Jawa Timur</option>
-                  </select>
-                </div>
-                <span class="col-1"></span>
-                <label class="col-1 col-form-label  font-weight-bold">Kota</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3">
-                    <select class="custom-select" name="optkodempn" id="optkodempn">
-                      <option selected>Pilih Salah Satu</option>
-                      <option value="1">Semararng</option>
-                      <option value="2">Surabaya</option>
-                    </select>
-                </div>
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Propinsi</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">Jawa Tengah</option>
+                  <option value="2">Jawa Timur</option>
+                </select>
               </div>
-              <!--input 8-->
-              <!--input 9-->
-              <div class="form-group row">
-                <label class="col-2 col-form-label  font-weight-bold">NPWP</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3"><input type="text" class="form-control"></div>
-                <span class="col-6"></span>
+              <span class="col-1"></span>
+              <label class="col-1 col-form-label  font-weight-bold">Kota</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">Semararng</option>
+                  <option value="2">Surabaya</option>
+                </select>
               </div>
-              <!--input 9-->
-              <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-              </div>
+            </div>
+            <!--input 8-->
+            <!--input 9-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">NPWP</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 9-->
+            <div class="d-flex justify-content-center">
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+            </div>
           </mdb-card-body>
         </mdb-card>
 
