--- a/src/app/passbook/cetak-passbook/cetak-passbook.component.html
+++ b/src/app/passbook/cetak-passbook/cetak-passbook.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -31,8 +31,8 @@
             </div>
             <!--input 2-->
             <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
             </div>
           </mdb-card-body>
         </mdb-card>
