--- a/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
+++ b/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -33,8 +33,8 @@
             <!--input 2-->
 
             <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
             </div>
           </mdb-card-body>
         </mdb-card>
@@ -45,4 +45,3 @@
   </div>
 
 </div>
-  
