--- a/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
+++ b/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -80,7 +80,7 @@
             <!--input 4-->
 
             <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
             </div>
           </mdb-card-body>
         </mdb-card>
