--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -110,12 +110,12 @@
               <span class="col-1"></span>
               <label class="col-2 col-form-label  font-weight-bold">Nilai Ekuivalen</label>
               <div class="col-2">
-                  <select class="custom-select" name="optkodempn" id="optkodempn">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
               </div>
               <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi Kredit</label>
             </div>
