--- a/src/app/teller-in/teller-in/teller-in.component.html
+++ b/src/app/teller-in/teller-in/teller-in.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -66,14 +66,14 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <span ></span>
-              <div class="col-4"><textarea rows="4" cols ="50" class="form-control"></textarea></div>
+              <span></span>
+              <div class="col-4"><textarea rows="4" cols="50" class="form-control"></textarea></div>
               <span class="col-6"></span>
             </div>
             <!--input 6-->
             <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
             </div>
           </mdb-card-body>
         </mdb-card>
