--- a/src/app/usermaintenance/ganti-password-override/ganti-password-override.component.html
+++ b/src/app/usermaintenance/ganti-password-override/ganti-password-override.component.html
@@ -1,56 +1,56 @@
 <!--Main layout-->
-<div class="m-3 h-100">
-    <!-- Start your project here-->
-    <div id="outer" class="d-flex flex-column">
-        <div class="card konten">
-            <div class="card-body">
-                <h5>Ubah Password Override</h5>
+<div class="bodyContent">
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card konten">
+      <div class="card-body">
+        <h5>Ubah Password Override</h5>
 
-                <mdb-card>
-                    <mdb-card-body>
+        <mdb-card>
+          <mdb-card-body>
 
-                        <!--input 1-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">User ID</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" value ="JATENGSP" disabled="disabled" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 1-->
-                        <!--input 2-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Password Lama</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 2-->
-                        <!--input 3-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Password Baru</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 3-->
-                        <!--input 4-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Ketik Ulang Password Baru</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 4-->
-                        <div class="d-flex justify-content-center">
-                            <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                            <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-                        </div>
-                    </mdb-card-body>
-                </mdb-card>
-
-                <span style="height: 10vh;"></span>
+            <!--input 1-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">User ID</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" value="JATENGSP" disabled="disabled" class="form-control"></div>
+              <span class="col-6"></span>
             </div>
-        </div>
+            <!--input 1-->
+            <!--input 2-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Password Lama</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 2-->
+            <!--input 3-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Password Baru</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 3-->
+            <!--input 4-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Ketik Ulang Password Baru</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 4-->
+            <div class="d-flex justify-content-center">
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+            </div>
+          </mdb-card-body>
+        </mdb-card>
+
+        <span style="height: 10vh;"></span>
+      </div>
     </div>
+  </div>
 
 </div>
