--- a/src/app/administrative/upload-transaksi/upload-transaksi.component.html
+++ b/src/app/administrative/upload-transaksi/upload-transaksi.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
