--- a/src/app/header/header-home/header-home.component.css
+++ b/src/app/header/header-home/header-home.component.css
@@ -4,6 +4,7 @@ header {
 }
 
 
+
 .navbar2 {
   background-image: url(/src/assets/image/material-img/HeaderWb.png);
   margin-top: 100px;
@@ -95,7 +96,7 @@ button.dropdown-toggle.waves-light {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-transform: uppercase;
   padding: 10px 10px;
-  min-width: 200px;
+  max-width: 100px;
   cursor: pointer;
   transition: 0.4s linear;
   position: relative;
@@ -104,6 +105,8 @@ button.dropdown-toggle.waves-light {
   color: #223344;
   box-shadow: 0 2px rgb(122, 122, 122);
   top: 2px;
+  font-size: 10px;
+  min-height: 60px;
 }
 
 button.dropdown-toggle.waves-light:hover {
@@ -126,19 +129,17 @@ button.dropdown-toggle.waves-light::before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #234a7b;
+  background-image: linear-gradient(to right top, #234a7b, #00597d, #006573, #176e63, #487455);
   z-index: -1;
   transition: transform 0.5s;
   transform-origin: 0 0;
-  transition-timing-function: cubic-bezier(0.05, 0.92, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.02, 1.16, 0.58, 1);
   border-radius: 5px;
-
-
 }
 
 button.dropdown-toggle.waves-light.btn-shift::before {
   transform: scaleX(0);
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 button.dropdown-toggle.waves-light.btn-shift:hover::before {
@@ -146,13 +147,9 @@ button.dropdown-toggle.waves-light.btn-shift:hover::before {
   border-radius: 2px;
 }
 
-button.dropdown-toggle.waves-light.btn-shift:active::before {
-  transform: scaleX(1);
-  border-radius: 2px;
-}
 
-/* @media (min-width: 1200px) {
-  bg-styleNav3 {
-    margin-top: 130px;
-  }
-} */
+
+button.btn-linear:hover {
+  background: linear-gradient(to top right, #234a7b -15%, #ff0000 102%);
+
+}
