--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
 <header class="navbar fixed-top">
   <img src="../../assets/image/LOGO.png">
+  <div class="justify-content-end d-flex">
+    <h1 class="web-branch">Web Branch</h1>
+  </div>
 </header>
