--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -16,7 +16,7 @@
                 <!-- Default checked -->
                 <div class="custom-control custom-radio">
                   <input type="radio" class="custom-control-input" id="defaultUnchecked1" name="defaultExampleRadios"
-                  checked mdbInputDirective>
+                    checked mdbInputDirective>
                   <label class="custom-control-label" for="defaultUnchecked1">Kode Nasabah</label>
                 </div>
                 <!-- Default unhecked -->
@@ -53,27 +53,27 @@
                 <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Cari</button>
               </div>
             </div>
-            
+
             <div>
               <hr>
             </div>
             <div class="form-group row">
-                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Pembuatan Nasabah Baru</label>
+              <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Pembuatan Nasabah Baru</label>
             </div>
             <div class="form-group row">
-                <span class="col-2"></span>
-                <div class="col-3">
-                  <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">Corporate</option>
-                    <option value="2">Retail</option>
-                  </select>
-                </div>
-                <div class="input-group-append" id="button-addon4">
-                    <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
-                  </div>
+              <span class="col-2"></span>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">Corporate</option>
+                  <option value="2">Retail</option>
+                </select>
               </div>
-              
+              <div class="input-group-append" id="button-addon4">
+                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
+              </div>
+            </div>
+
           </mdb-card-body>
         </mdb-card>
 
