--- a/src/app/rekening-koran/daftarrekening/daftarrekening.component.html
+++ b/src/app/rekening-koran/daftarrekening/daftarrekening.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -15,14 +15,14 @@
             </div>
             <!--input1-->
 
-           
-        
+
+
           </mdb-card-body>
         </mdb-card>
         <div class="d-flex justify-content-center mt-2">
           <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Refresh</button>
           <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Batal</button>
-      </div>
+        </div>
         <span style="height: 20vh;"></span>
       </div>
     </div>
