--- a/src/app/report/cetak-rekening/cetak-rekening.component.html
+++ b/src/app/report/cetak-rekening/cetak-rekening.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
@@ -14,13 +14,13 @@
               <label class="col-2 col-form-label  font-weight-bold"></label>
             </div>
             <!--input1-->
-        
+
           </mdb-card-body>
         </mdb-card>
         <div class="d-flex justify-content-center mt-2">
           <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Cetak Rekening</button>
           <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Download Report</button>
-      </div>
+        </div>
         <span style="height: 20vh;"></span>
       </div>
     </div>
