--- a/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
+++ b/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
@@ -1,39 +1,38 @@
 <!--Main layout-->
-<div class="m-3 h-100">
-    <!-- Start your project here-->
-    <div id="outer" class="d-flex flex-column">
-      <div class="card konten">
-        <div class="card-body">
-          <h5 class="text-primary font-weight-bold">Sinkronisasi Transaksi Financial Retail</h5>
-  
-          <mdb-card>
-            <mdb-card-body>
-  
-              <!--input 1-->
-              <div class="form-group row">
-                <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3">
-                  <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">IDR</option>
-                    <option value="2">USD</option>
-                    <option value="3">YEN</option>
-                  </select>
-                </div>
+<div class="bodyContent">
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card konten">
+      <div class="card-body">
+        <h5 class="text-primary font-weight-bold">Sinkronisasi Transaksi Financial Retail</h5>
+
+        <mdb-card>
+          <mdb-card-body>
+
+            <!--input 1-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">IDR</option>
+                  <option value="2">USD</option>
+                  <option value="3">YEN</option>
+                </select>
               </div>
-              <!--input 1-->
-              <div class="d-flex justify-content-center">
-                  <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                  <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-              </div>
-            </mdb-card-body>
-          </mdb-card>
-  
-          <span style="height: 10vh;"></span>
-        </div>
+            </div>
+            <!--input 1-->
+            <div class="d-flex justify-content-center">
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+            </div>
+          </mdb-card-body>
+        </mdb-card>
+
+        <span style="height: 10vh;"></span>
       </div>
     </div>
-  
   </div>
-  
+
+</div>
