--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
@@ -10,44 +10,47 @@
           <div class="card">
             <div class="card-body">
               <!-- <form> -->
-                <table class="table table-sm table-striped table-hover table-bordered" style="height:25px; text-align:center;">
-                  <thead class="thead-light">
-                    <tr>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:4%;line-height: 1.2">User ID</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:20%;line-height: 1.2">Nama</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Login Terakhir</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Logout Terakhir</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:8%;line-height: 1.2">Status</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:10%;line-height: 1.2">Kode Departemen</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Pilih Proses</th>
-                    </tr>
-                    <tr *ngFor="let record of ktrlusers; let i = index; let evenRecords = even; let oddRecords = odd;let firsRecords = first; let lastRecords = last;" [ngClass]="{odd:oddRecords, even:evenRecords, first : firsRecords, last : lastRecords}">
-                      <td>{{record.UserId}}</td>
-                      <td style="text-align:left">{{record.Nama}}</td>
-                      <td>{{record.LoginAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
-                      <td>{{record.LogoutAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
-                      <td>{{record.Status}}</td>
-                      <td>{{record.KodeDept}}</td>
-                      <td>
-                          <!-- <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a> -->
-                        <button class="btn-sm" mdbBtn color="default" data-toggle="modal" title="Lihat Data" (click)="bukaModal(record.id)" mdbWavesEffect>
-                          <span>Lihat</span>
-                        </button>
-                        <span style="margin:3px"></span>
-                        <button class="btn-sm" mdbBtn color="default" data-toggle="modal" title="Hapus Data"  (click)="hapusdata(record.UserId)" mdbWavesEffect>
-                            <span>Hapus Data </span>
-                          </button>
-                        <span style="margin:3px"></span>
-                        <!-- <a class="btn-sm" mdbBtn color="default" title="Hapus Data" data-toggle="confirmation" href="tabelbarang/delete/{{this.id}}">
+              <table class="table table-sm table-striped table-hover table-bordered" style="height:25px; text-align:center;">
+                <thead class="thead-light">
+                  <tr>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:4%;line-height: 1.2">User ID</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:20%;line-height: 1.2">Nama</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Login Terakhir</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Logout Terakhir</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:8%;line-height: 1.2">Status</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:10%;line-height: 1.2">Kode Departemen</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Pilih Proses</th>
+                  </tr>
+                  <tr *ngFor="let record of ktrlusers; let i = index; let evenRecords = even; let oddRecords = odd;let firsRecords = first; let lastRecords = last;"
+                    [ngClass]="{odd:oddRecords, even:evenRecords, first : firsRecords, last : lastRecords}">
+                    <td>{{record.UserId}}</td>
+                    <td style="text-align:left">{{record.Nama}}</td>
+                    <td>{{record.LoginAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                    <td>{{record.LogoutAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                    <td>{{record.Status}}</td>
+                    <td>{{record.KodeDept}}</td>
+                    <td>
+                      <!-- <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a> -->
+                      <button class="btn-sm" mdbBtn color="default" data-toggle="modal" title="Lihat Data" (click)="bukaModal(record.id)"
+                        mdbWavesEffect>
+                        <span>Lihat</span>
+                      </button>
+                      <span style="margin:3px"></span>
+                      <button class="btn-sm" mdbBtn color="default" data-toggle="modal" title="Hapus Data" (click)="hapusdata(record.UserId)"
+                        mdbWavesEffect>
+                        <span>Hapus Data </span>
+                      </button>
+                      <span style="margin:3px"></span>
+                      <!-- <a class="btn-sm" mdbBtn color="default" title="Hapus Data" data-toggle="confirmation" href="tabelbarang/delete/{{this.id}}">
                           <span>Hapus</span>
                         </a> -->
-                      </td>
-                    </tr>
-                  </thead>
-                </table>
-                <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-primary btn-rounded">Keluar</button>
-                </div>
+                    </td>
+                  </tr>
+                </thead>
+              </table>
+              <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-primary btn-rounded">Keluar</button>
+              </div>
               <!-- </form> -->
             </div>
           </div>
@@ -60,7 +63,7 @@
 
 <div mdbModal #basicModal="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
   aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog"  role="document">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Lihat Data</h4>
